# ActivityTracker

./: .env.template  .gitignore  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_07_17_0312_d2e7e15bfd1e_user_model_creation.py  2024_07_17_1332_e4f8b15926ce_accesstoken_model_creation.py  2024_07_18_1440_9b1c9614e112_tasktrackerbasemodel_updating.py  2024_07_19_1431_b7c55606fbd2_uom_model_creation.py  2024_07_19_1647_a97036fb99f6_folder_model_creation.py  2024_07_19_2231_4572720614c0_folder_model_creation.py  2024_07_24_0135_180415d3eca3_task_model_creation.py  2024_08_04_1827_c61dac432763_activity_model_creation.py
src/: __init__.py  main.py
src/activity/: crud.py  models.py  schemas.py  views.py
src/authentication/: models.py  transport.py  user_manager.py  views.py
src/authentication/dependencies/: access_tokens.py  backend.py  fastapi_users_routers.py  strategy.py  (+2 more)
src/core/: crud.py  database_helper.py  mixins.py  models.py  router.py  settings.py
src/folder/: crud.py  models.py  schemas.py  views.py
src/task/: crud.py  models.py  schemas.py  views.py
src/uom/: crud.py  models.py  schemas.py  views.py
src/user/: models.py  schemas.py  views.py
tests/: conftest.py
tests/test_folder/: test_create_and_get_and_delete.py  test_create_and_update_and_delete.py
tests/test_handlers/: test_get_handler.py
tests/test_task/: test_create_and_get_and_delete.py  test_create_task_in_wrong_folder.py  test_get_handler.py  test_patch_in_wrong_folder.py
tests/test_uom/: test_get_handler.py
tests/test_user/: test_get_handler.py
(+2 files in other folders)
